--- a/private/package.json
+++ b/private/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.15.2",
     "cors": "^2.7.1",
     "express": "^4.14.0",
-    "massive": "^2.5.0"
+    "massive": "^2.5.0",
+    "passport": "^0.3.2"
   }
 }
